crates/pg_syntax/tests/snapshots/postgres_regress/regproc@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regoper('pg_catalog.||/');"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..17 "to_regoper"
      Ascii40@17..18 "("
      AConst@18..34
        Sconst@18..34 "'pg_catalog.||/'"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

