crates/pg_syntax/tests/snapshots/postgres_regress/regproc@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regproc('pg_catalog.now');"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..17 "to_regproc"
      Ascii40@17..18 "("
      AConst@18..34
        Sconst@18..34 "'pg_catalog.now'"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

