crates/pg_syntax/tests/snapshots/postgres_regress/regproc@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regclass('pg_catalog.pg_class');"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..18 "to_regclass"
      Ascii40@18..19 "("
      AConst@19..40
        Sconst@19..40 "'pg_catalog.pg_class'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

