crates/pg_syntax/tests/snapshots/postgres_regress/regproc@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regcollation('pg_catalog.\"POSIX\"');"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..22 "to_regcollation"
      Ascii40@22..23 "("
      AConst@23..43
        Sconst@23..43 "'pg_catalog.\"POSIX\"'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

