crates/pg_syntax/tests/snapshots/postgres_regress/regproc@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regoperator('+(int4,int4)');"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..18 "regoperator"
      Ascii40@18..19 "("
      AConst@19..33
        Sconst@19..33 "'+(int4,int4)'"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

