crates/pg_syntax/tests/snapshots/postgres_regress/regproc@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regnamespace('pg_catalog');"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..32
    FuncCall@7..32
      Ident@7..19 "regnamespace"
      Ascii40@19..20 "("
      AConst@20..32
        Sconst@20..32 "'pg_catalog'"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

