crates/pg_syntax/tests/snapshots/postgres_regress/regproc@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regrole('regress_regrole_test');"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..17 "to_regrole"
      Ascii40@17..18 "("
      AConst@18..40
        Sconst@18..40 "'regress_regrole_test'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

