crates/pg_syntax/tests/snapshots/postgres_regress/regproc@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regrole('\"regress_regrole_test\"');"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..17 "to_regrole"
      Ascii40@17..18 "("
      AConst@18..42
        Sconst@18..42 "'\"regress_regrole_test\"'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

