crates/pg_syntax/tests/snapshots/postgres_regress/regproc@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regnamespace('pg_catalog');"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..22 "to_regnamespace"
      Ascii40@22..23 "("
      AConst@23..35
        Sconst@23..35 "'pg_catalog'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

